--- a/cartridges/app_custom_pd/cartridge/client/default/scss/experience/v_page.scss
+++ b/cartridges/app_custom_pd/cartridge/client/default/scss/experience/v_page.scss
@@ -1,4 +1,13 @@
 .hero-slider{
-    min-height: 300px;
+    padding: unset;
+    .carousel-item {
+        padding: 0!important;
+    }
+    .carousel-control-prev {
+        left: 1rem;
+    }
+    .carousel-control-next {
+        right: 1rem;
+    }
 }
 
