--- a/cartridges/app_custom_pd/cartridge/static/default/css/experience/components/commerceAssets/customImageAndTextCommon.css
+++ b/cartridges/app_custom_pd/cartridge/static/default/css/experience/components/commerceAssets/customImageAndTextCommon.css
@@ -5,3 +5,19 @@
 .mainbanner-image {
   height: 300px;
 }
+
+.image-heading-container .mainbanner-sub-text p {
+  text-decoration: none;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 0rem 0.4rem;
+  border-radius: 0.2rem;
+  border: 1px solid black;
+  white-space: nowrap;
+  -webkit-transition: all 0.3s ease, color 0.3s ease;
+  transition: all 0.3s ease, color 0.3s ease;
+}
+
+.image-heading-container .mainbanner-sub-text p:hover {
+  background-color: white;
+  color: var(--skin-primary-color-1);
+}
