--- a/cartridges/app_custom_pd/cartridge/static/default/css/experience/v_page.css
+++ b/cartridges/app_custom_pd/cartridge/static/default/css/experience/v_page.css
@@ -1,3 +1,12 @@
 .hero-slider {
-  min-height: 300px;
+  padding: unset;
+}
+.hero-slider .carousel-item {
+  padding: 0 !important;
+}
+.hero-slider .carousel-control-prev {
+  left: 1rem;
+}
+.hero-slider .carousel-control-next {
+  right: 1rem;
 }
