--- a/cartridges/app_custom_pd/cartridge/static/default/css/experience/components/commerceAssets/customImageAndTextCommon.css
+++ b/cartridges/app_custom_pd/cartridge/static/default/css/experience/components/commerceAssets/customImageAndTextCommon.css
@@ -3,7 +3,7 @@
 }
 
 .mainbanner-image {
-  height: 300px;
+  height: 18.75rem;
 }
 
 .image-heading-container .mainbanner-sub-text p {
@@ -11,13 +11,13 @@
   background-color: rgba(255, 255, 255, 0.5);
   padding: 0rem 0.4rem;
   border-radius: 0.2rem;
-  border: 1px solid black;
+  border: 1px solid #000;
   white-space: nowrap;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
 .image-heading-container .mainbanner-sub-text p:hover {
-  background-color: white;
+  background-color: #fff;
   color: var(--skin-primary-color-1);
 }
