--- a/cartridges/app_custom_pd/cartridge/client/default/scss/experience/components/commerceAssets/categoryComponent.scss
+++ b/cartridges/app_custom_pd/cartridge/client/default/scss/experience/components/commerceAssets/categoryComponent.scss
@@ -1,3 +1,5 @@
+@import "~base/variables";
+
 .image-wrapper {
     background-position: right;
     background-size: cover;
@@ -15,17 +17,17 @@
     background-color: rgba(255, 255, 255, 0.5);
     padding: 0rem 0.4rem;
     border-radius: 0.2rem;
-    border: 1px solid black;
+    border: 1px solid $black;
     white-space: nowrap;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.cta-link a{
+.cta-link a {
     text-decoration: none;
 }
 
-.cta-link:hover{
-    background-color: white;
+.cta-link:hover {
+    background-color: $white;
 }
 
 .bottom {
@@ -43,12 +45,12 @@
 }
 
 .top {
-    top:0.5rem;
+    top: 0.5rem;
 }
 
 .image-cropper {
     width: 100%;
-    height: 300px;
+    height: 18.75rem;
     border-radius: unset;
 }
 
