--- a/cartridges/app_custom_pd/cartridge/static/default/css/experience/components/commerceAssets/categoryComponent.css
+++ b/cartridges/app_custom_pd/cartridge/static/default/css/experience/components/commerceAssets/categoryComponent.css
@@ -1,7 +1,6 @@
-.image-wrapper {
-  background-position: right;
-  background-size: cover;
-  background-repeat: no-repeat;
+.category-img {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .tile-container {
@@ -58,4 +57,14 @@
 .fa {
   margin-left: 0.5rem;
   color: var(--skin-primary-color-1);
+}
+
+@media (max-width: 992px) {
+  .image-cropper {
+    height: 8rem;
+  }
+  .category-img {
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
