--- a/cartridges/app_custom_pd/cartridge/client/default/scss/experience/components/commerceAssets/categoryComponent.scss
+++ b/cartridges/app_custom_pd/cartridge/client/default/scss/experience/components/commerceAssets/categoryComponent.scss
@@ -1,6 +1,6 @@
 @import "~base/variables";
 
-.category-img{
+.category-img {
     object-fit: fill;
 }
 
@@ -8,15 +8,20 @@
     position: relative;
 }
 
-.cta-link {
+.cat-description {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     background-color: rgba(255, 255, 255, 0.5);
-    padding: 0rem 0.4rem;
-    border-radius: 0.2rem;
-    border: 1px solid $black;
     white-space: nowrap;
+    border-radius: 0.2rem;
+    padding: 0rem 0.5rem;
+}
+
+.cta-link {
+    @extend .cat-description;
+
+    border: 1px solid $black;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -30,16 +35,6 @@
 
 .bottom {
     bottom: 0.5rem;
-}
-
-.cat-description {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(255, 255, 255, 0.5);
-    padding: 0rem 0.5rem;
-    border-radius: 0.2rem;
-    white-space: nowrap;
 }
 
 .top {
@@ -62,7 +57,7 @@
         height: 8rem;
     }
 
-    .category-img{
+    .category-img {
         object-fit: cover;
     }
 }
